Added github link to latex-Doku.

--- a/latex-doku/main.tex
+++ b/latex-doku/main.tex
@@ -32,6 +32,9 @@
 \subsection{Motivation}
 Unser Ziel war es, ein Gerät zu entwerfen, welches einen oder mehrere Server auf Angriffe untersucht und diese eventuell sogar schon vorbeugt. Das Gerät sollte dabei möglichst einfach einzubauen sein, ohne große Änderungen am bestehenden System vornehmen zu müssen.
 
+\subsection{Code Repository}
+Unseren Code und Dokumentation haben wir auf github verwaltet. \href{https://github.com/rubenMiller/intrusion-detection-pi}{Hier der Link zu dem öffentlichen repository.}
+
 \section{Anforderungen}
 Im folgenden sind die Anforderungen beschrieben, die wir uns für unser Projekt gesetzt haben.
 
